--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcsh 'Young, John R., 1837-'
 - !lcc 'BX'
 - !lcsh 'Mormon pioneers -- Utah -- Biography'
+- GITenberg
 title: Memoirs of John R. Young, Utah Pioneer, 1847
 url: http://www.gutenberg.org/ebooks/46391
